Fixed collapsing of transactions when container width is too small by using an @container statement in the css.

--- a/client-src/Transactions/Transactions.module.scss
+++ b/client-src/Transactions/Transactions.module.scss
@@ -248,13 +248,17 @@ $balance-width: 8rem;
   }
 }
 
-@media (max-width: breakpoints.$side-by-side) {
+@container transactions (width < #{breakpoints.$detail-view-min-width}) {
   $icon-width: 0;
   $amount-width: 6rem;
   $date-width: 4rem;
 
   .transaction {
     margin-bottom: 1rem;
+  }
+
+  .register-title {
+    display: none;
   }
 
   .transaction,
