--- a/client-src/_breakpoints.scss
+++ b/client-src/_breakpoints.scss
@@ -1,1 +1,3 @@
 $side-by-side: 600px;
+
+$detail-view-min-width: 650px;
